fix announcements-board overflow

--- a/styles.css
+++ b/styles.css
@@ -558,7 +558,6 @@ a {
     padding: 20px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1), 0 3px 5px 0 rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    overflow: auto;
 }
 
 .announcement > p {
